fixed hero image flicker

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     min-width: 100vw;
-    min-height: 60vh;
+    min-height: 100vh;
 
     @include md {
         scroll-snap-align: start;
@@ -19,11 +19,11 @@
         align-content: center;
         justify-content: center;
         min-width: 100vw;
-        height: 30vh;
+        min-height: 50vh;
 
         @include md {
             flex-direction: row;
-            height: 60vh
+           
         }
 
 
@@ -34,6 +34,7 @@
             flex-direction: column;
             justify-content: center;
             text-align: center;
+            margin-top: 5rem;
             min-width: 100vw;
             
             
@@ -77,9 +78,8 @@
            justify-content: center;
            align-content: center;
            margin:auto;
-       
-
-
+           font-family: $font;
+           
            @include md {
             min-width: 40vw;
            }
@@ -163,7 +163,7 @@
 
     .footer-purple{
         background-color: #5E33D1;
-        height: 35vh;
+        min-height: 50vh;
         min-width:100vw ;
         display: flex;
         text-align: center;
