--- a/src/styles/_yellow.scss
+++ b/src/styles/_yellow.scss
@@ -57,7 +57,6 @@
             font-size: 0.8rem;
             letter-spacing: 3.2px;
             margin-bottom: 2rem;
-            padding: 0 1rem;
             cursor:default;
 
             @include md {
