--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,7 +33,7 @@ html,body {
   
 
     @include md {
-        overflow-x:hidden;
+        overflow-x:unset;
         overflow-y:unset;
         scroll-snap-type: y mandatory;
         -webkit-overflow-scrolling: touch;
